# vvvvv-backend

./: .gitignore  Cargo.toml  docker-compose.yml
migrations/2021-09-15-202835_init/: down.sql  up.sql
src/: main.rs  schema.rs
src/common/failure/: failure_dto.rs  failure_handler.rs  mod.rs
src/common/failure/domain/: failure.rs
src/config/: auth_config.rs  common_config.rs  mod.rs  profile_config.rs
src/features/: mod.rs
src/features/auth/: mod.rs
src/features/auth/api/: auth_controller.rs  auth_middleware.rs  mod.rs
src/features/auth/api/dtos/: login_dto.rs  mod.rs  refresh_token_dto.rs  tokens_pair_dto.rs
src/features/auth/domain/: auth_data.rs  current_user_data.rs  mod.rs  tokens_pair.rs  user_role.rs
src/features/auth/errors/: auth_errors.rs  client_secret_errors.rs  login_errors.rs  mod.rs  password_errors.rs  token_errors.rs
src/features/auth/infrastructure/: auth_data_repository_impl.rs  jwt_token_provider.rs  mod.rs  password_manager_impl.rs
src/features/auth/infrastructure/entities/: mod.rs  token_claims.rs  (+1 more)
src/features/auth/interactors/: auth_interactor.rs  mod.rs
src/features/mailer/: mailer.rs
src/features/profile/: mod.rs
src/features/profile/api/: mod.rs  profile_controller.rs
src/features/profile/domain/: create_user_model.rs  mod.rs  user.rs
src/features/profile/errors/: mod.rs  profile_errors.rs
src/features/profile/infrastructure/: mod.rs  profile_repository_impl.rs  verification_keys_storage_impl.rs
src/features/profile/interactors/: mod.rs  profile_interactor.rs
src/features/profile/utils/: code_generator.rs
(+9 files in other folders)
